# test

edu-binshi-school-evaluation-code-main/: README.md  app.toml  pyproject.toml
edu-binshi-school-evaluation-code-main/backend/: app_config.py  app_entry.py  backend_containers.py  business_pubsub_manager.py  factories.py  scheduler_manager.py
edu-binshi-school-evaluation-code-main/backend/blueprint/: __init__.py  ability_permission_blueprint.py  auth_blueprint.py  benchmark_blueprint.py  benchmark_strategy_blueprint.py  capacity_blueprint.py  dept_blueprint.py  dingtalk_user_blueprint.py  evaluation_assignment_blueprint.py  evaluation_criteria_blueprint.py  evaluation_criteria_plan_blueprint.py  evaluation_criteria_plan_scope_blueprint.py  evaluation_criteria_plan_statistics_blueprint.py  evaluation_criteria_tree_blueprint.py  evaluation_record_blueprint.py  evaluation_report_blueprint.py  input_score_log_blueprint.py  k12_teacher_subject_blueprint.py  menu_blueprint.py  people_blueprint.py  period_blueprint.py  period_category_blueprint.py  role_blueprint.py  route_blueprint.py  score_symbol_blueprint.py  site_message_blueprint.py  storage_blueprint.py  student_blueprint.py  tag_blueprint.py  team_blueprint.py  team_category_blueprint.py  team_goal_blueprint.py  team_member_blueprint.py  todo_task_blueprint.py  user_blueprint.py
edu-binshi-school-evaluation-code-main/backend/data/: constant.py  enum.py  settings.py
edu-binshi-school-evaluation-code-main/backend/repository/: app_establishment_assignment_repository.py  app_evaluation_criteria_plan_repository.py  app_input_score_log_repository.py  evaluation_criteria_plan_statistics_repository.py  storage_repository.py
edu-binshi-school-evaluation-code-main/backend/scheduler_jobs/: jobs_cron.py
edu-binshi-school-evaluation-code-main/backend/service/: app_ability_permission_service.py  app_dingtalk_user_service.py  app_evaluation_assignment_service.py  app_evaluation_criteria_plan_scope_service.py  app_evaluation_criteria_plan_service.py  app_input_score_log_service.py  app_role_service.py  app_student_service.py  app_team_service.py  app_user_service.py  authorization_service.py  evaluation_criteria_plan_statistics_service.py  evaluation_report_service.py  period_service.py  redis_service.py  storage_service.py
edu-binshi-school-evaluation-code-main/backend/tasks/: tasks.py
edu-binshi-school-evaluation-code-main/backend/utility/: redis_helper.py  server_helper.py
edu-binshi-school-evaluation-code-main/config/: deploy_backend.sh
edu-binshi-school-evaluation-code-main/config/stg/: deploy_web.sh  env.file  frpc@stg-binshi-school-evaluation.ini  frpc@stg-binshi-school-evaluation.service  frps@stg-binshi-school-evaluation-40.ini  frps@stg-binshi-school-evaluation.service  intranet-stg-binshi-school-evaluation.org-assistant.com.conf  public-stg-binshi-school-evaluation.org-assistant.com.conf
edu-binshi-school-evaluation-code-main/config/systemctl/: edu-binshi-school-evaluation-backend.service  edu-binshi-school-evaluation-pubsub.service  edu-binshi-school-evaluation-scheduler.service
edu-binshi-school-evaluation-code-main/context_sync/: context_sync_containers.py
edu-binshi-school-evaluation-code-main/context_sync/data/: enum.py
edu-binshi-school-evaluation-code-main/context_sync/entity/: context_people_user_map.py  context_sync_log.py
edu-binshi-school-evaluation-code-main/context_sync/model/: context_dept_map_model.py  context_sync_log_model.py
edu-binshi-school-evaluation-code-main/context_sync/repository/: context_dept_map_repository.py  context_organization_corp_map_repository.py  context_people_user_map_repository.py  context_sync_log_repository.py
edu-binshi-school-evaluation-code-main/context_sync/service/: sync_dingtalk_service.py  (+2 more)
edu-binshi-school-evaluation-code-main/docs/: 钉钉的踩坑记录.md
edu-binshi-school-evaluation-code-main/domain_evaluation/: domain_evaluation_containers.py
edu-binshi-school-evaluation-code-main/edu_binshi/: edu_evaluation_containers.py
edu-binshi-school-evaluation-code-main/frontend_dingtalk/: .env  .env.development  .env.production  .env.staging  .gitignore  index.html  package.json  vite.config.js
edu-binshi-school-evaluation-code-main/frontend_web/: .env  .env.development  .env.production  .env.staging  README.md  commitlint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  windi.config.ts
edu-binshi-school-evaluation-code-main/infra_backbone/: backbone_container.py
edu-binshi-school-evaluation-code-main/infra_dingtalk/: dingtalk_container.py
edu-binshi-school-evaluation-code-main/scripts/: format.bat  lint.bat  update.sql
edu-binshi-school-evaluation-code-main/tests/: conftest.py  test_add_scheduler_jobs.py  test_database.py
edu-student-comprehensive-quality-assessment-platform-backend-code-main/: .gitignore  README.md  app.toml  pyproject.toml
edu-student-comprehensive-quality-assessment-platform-backend-code-main/backend/: app_config.py  app_entry.py  backend_container.py  business_pubsub_manager.py  factories.py  scheduler_manager.py
edu-student-comprehensive-quality-assessment-platform-backend-code-main/biz_comprehensive/: comprehensive_container.py
edu-student-comprehensive-quality-assessment-platform-backend-code-main/context_sync/: context_sync_container.py
edu-student-comprehensive-quality-assessment-platform-backend-code-main/infra_backbone/: backbone_container.py  object_storage_container.py
edu-student-comprehensive-quality-assessment-platform-backend-code-main/infra_dingtalk/: dingtalk_container.py
edu-student-comprehensive-quality-assessment-platform-backend-code-main/scripts/: format.bat  lint.bat  update.sql
edu-student-comprehensive-quality-assessment-platform-backend-code-main/tests/: conftest.py  init_symbol.py  temp.py
edu-student-comprehensive-quality-assessment-platform-web-app-code-main-frontend/: pyproject.toml
edu-student-comprehensive-quality-assessment-platform-web-app-code-main-frontend/frontend/: .env.development  .eslintrc.js  README.md  http.ts  package.json
(+1597 files in other folders)
