[tool.poetry]
name = "edu-student-comprehensive-quality-assessment-platform-backend-code"
version = "0.1.0"
description = ""
authors = ["wei.fang <wei.fang@qindingtech.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "nexus"
url = "https://yundi:yundi@repository.qindingtech.com/repository/pypi-public/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
apscheduler = "^3.10.4"
boto3 = "^1.33.5"
cryptography = "^41.0.7"
dingtalk-sdk = "^1.3.8"
flask = "^2.1,<2.3.0"
flask-jwt-extended = "^4.5.2"
flask-cors = "^3.0.10"
infra-utility = { version = "^2023.2.1", source = "nexus" }
infra-object-storage = { version = "^2023.3.10", source = "nexus" }
infra-pub-sub-manager = { version = "^2023.2.2", source = "nexus" }
infra-basic = { version = "^2023.2.11", source = "nexus" }
minio = "^7.1.3"
optionaldict = "^0.1.2"
orjson = "^3.8.12"
pillow = "^9.0"
pypinyin = "^0.49.0"
python = "~3.11"
shortuuid = "^1.0.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
black = "^23.12.0"
pylint = "^2.17.7"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
atomic = false
combine_as_imports = true
ensure_newline_before_comments = false
filter_files = true
force_alphabetical_sort_within_sections = true
force_grid_wrap = 0
known_first_party = "poetry"
line_length = 100
lines_after_imports = -1
lines_between_types = 0
profile = "black"
remove_redundant_aliases = true
skip_glob = ["*/setup.py"]
use_parentheses = true

[tool.pylint.MASTER]
ignore = ''

[tool.pylint.FORMAT]
max-line-length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = "C0302,R0902,R0904,C0103,R0022,W0613,R1702,R0914,W0511,C0112,W0212,E2511,C0304, C0301,C0303, E0611,C0411, R0903,R0913, W0703, C0114, C0115, C0116, I1101, R0801"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 8
ignore-comments = true
ignore-docstrings = true
ignore-imports = true


