[tool.poetry]
name = "edu-student-comprehensive-quality-assessment-platform-web-app-code-main-frontend"
version = "0.1.0"
description = ""
authors = ["juan.huang <juan.huang@yundinetwork.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
